--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-router": "^6.11.2",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -26,7 +27,7 @@
       "react-app/jest"
     ]
   },
-  "proxy": "http://localhost:8080", 
+  "proxy": "http://localhost:8080",
   "browserslist": {
     "production": [
       ">0.2%",
